--- a/src/CSimple/App.xaml
+++ b/src/CSimple/App.xaml
@@ -174,7 +174,7 @@
     </Application.Resources>
     <Application.MainPage>
         <Shell FlyoutWidth="200"
-               FlyoutBackgroundColor="{StaticResource BackgroundTertiary}"
+               FlyoutBackgroundColor="{AppThemeBinding Light={StaticResource BackgroundSecondary}, Dark={StaticResource BackgroundTertiary}}"
                FlyoutBehavior="Flyout">
             <!-- Desktop/Tablet -->
             <FlyoutItem Title="Home"
